<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">RedReader</string>
    <string name="firstrun_login_title">Log in</string>
    <string name="firstrun_login_message">You are not currently logged in. You can access the account list by selecting "Accounts" from the menu.</string>
    <string name="prefs_category_appearance">Appearance</string>
    <string name="prefs_category_behaviour">Behaviour</string>
    <string name="prefs_category_cache">Cache</string>
    <string name="prefs_category_menus">Menus</string>
    <string name="pref_behaviour_notifications_key" translatable="false">pref_behaviour_notifications</string>
    <string name="pref_behaviour_notifications_title">Notifications</string>
    <string name="pref_behaviour_actions_post_header">Post Actions</string>
    <string name="pref_behaviour_actions_comment_header">Comment Actions</string>
    <string name="pref_behaviour_posts_header">Posts</string>
    <string name="pref_behaviour_fling_post_left_key" translatable="false">pref_behaviour_fling_post_left</string>
    <string name="pref_behaviour_fling_post_left_title">Fling left</string>
    <string name="pref_behaviour_fling_post_right_key" translatable="false">pref_behaviour_fling_post_right</string>
    <string name="pref_behaviour_fling_post_right_title">Fling right</string>
    <string name="pref_behaviour_actions_comment_tap_key" translatable="false">pref_behaviour_actions_comment_tap</string>
    <string name="pref_behaviour_actions_comment_tap_title">Press</string>
    <string name="pref_behaviour_nsfw_key" translatable="false">pref_behaviour_nsfw</string>
    <string name="pref_behaviour_nsfw_title">Show NSFW content</string>
    <string name="pref_cache_pruning">Cache Pruning</string>
    <string name="pref_cache_maxage_listing_key" translatable="false">pref_cache_maxage_listing</string>
    <string name="pref_cache_maxage_listing_title">Delete cached listings after</string>
    <string name="pref_cache_maxage_thumb_key" translatable="false">pref_cache_maxage_thumb</string>
    <string name="pref_cache_maxage_thumb_title">Delete cached thumbnails after</string>
    <string name="pref_cache_maxage_image_key" translatable="false">pref_cache_maxage_image</string>
    <string name="pref_cache_maxage_image_title">Delete cached images after</string>
    <string name="pref_cache_precache_images_header">Precache Images</string>
    <string name="pref_cache_precache_images_key" translatable="false">pref_cache_precache_images</string>
    <string name="pref_cache_precache_images_title">Precache images</string>
    <string name="pref_cache_precache_images_wifionly_key" translatable="false">pref_cache_precache_images_wifionly</string>
    <string name="pref_cache_precache_images_wifionly_title">Only on Wi-Fi</string>
    <string name="action_upvote">Upvote</string>
    <string name="action_downvote">Downvote</string>
    <string name="action_upvote_remove">Remove Upvote</string>
    <string name="action_downvote_remove">Remove Downvote</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="pref_behaviour_commentsort_key" translatable="false">pref_behaviour_commentsort</string>
    <string name="pref_behaviour_commentsort">Comments (default)</string>
    <string name="prefs_category_about">About</string>
    <string name="pref_behaviour_sort_header">Sorting</string>
    <string name="prefs_category_network">Network</string>
    <string name="pref_behaviour_useinternalbrowser_title">Use internal browser</string>
    <string name="pref_behaviour_useinternalbrowser_key" translatable="false">pref_behaviour_useinternalbrowser</string>
    <string name="pref_behaviour_postcount_title">Restrict post count</string>
    <string name="pref_behaviour_postcount_key" translatable="false">pref_behaviour_postcount</string>
    <string name="pref_behaviour_skiptofrontpage_title">Skip to front page</string>
    <string name="pref_behaviour_skiptofrontpage_key" translatable="false">pref_behaviour_skiptofrontpage</string>
    <string name="pref_behaviour_screenorientation_title">Screen orientation</string>
    <string name="pref_behaviour_screenorientation_key" translatable="false">pref_behaviour_screenorientation</string>
    <string name="pref_behaviour_bezel_toolbar_header">Post Side-Toolbar</string>
    <string name="pref_behaviour_bezel_toolbar_swipezone_key" translatable="false">pref_behaviour_bezel_toolbar_swipezone</string>
    <string name="pref_behaviour_bezel_toolbar_swipezone_title">Post side-toolbar swipe zone size</string>
    <string name="pref_cache_precache_comments_header">Precache Comments</string>
    <string name="pref_cache_precache_comments_key" translatable="false">pref_cache_precache_comments</string>
    <string name="pref_cache_precache_comments_title">Precache comments</string>
    <string name="pref_cache_precache_comments_wifionly_key" translatable="false">pref_cache_precache_comments_wifionly</string>
    <string name="pref_cache_precache_comments_wifionly_title">Only on Wi-Fi</string>
    <string name="pref_behaviour_comment_min_key" translatable="false">pref_behaviour_comment_min</string>
    <string name="pref_behaviour_comments_header">Comments</string>
    <string name="pref_behaviour_comment_min_title">Minimum comment score</string>
    <string name="pref_behaviour_comment_min_dialog_title">Collapse comment if score below (blank to show all)</string>
	<string name="pref_behaviour_actions_comment_longclick_key" translatable="false">pref_behaviour_actions_comment_longclick</string>
	<string name="pref_behaviour_actions_comment_longclick_title">Long press</string>
	<string name="pref_behaviour_fling_comment_left_key" translatable="false">pref_behaviour_fling_comment_left</string>
	<string name="pref_behaviour_fling_comment_left_title">Fling left</string>
	<string name="pref_behaviour_fling_comment_right_key" translatable="false">pref_behaviour_fling_comment_right</string>
	<string name="pref_behaviour_fling_comment_right_title">Fling right</string>
	<string name="pref_behaviour_postsort_key" translatable="false">pref_behaviour_postsort</string>
	<string name="pref_behaviour_postsort">Posts (default)</string>
	<string name="pref_behaviour_share_permalink_key" translatable="false">pref_behaviour_share_permalink</string>
	<string name="pref_behaviour_share_permalink_title">Share as permalink</string>
	<string name="pref_behaviour_pinned_subredditsort_key" translatable="false">pref_behaviour_pinned_subreddit_sort</string>
	<string name="pref_behaviour_pinned_subredditsort">Pinned subreddits</string>
	<string name="pref_behaviour_enable_swipe_refresh_title">Swipe down to refresh</string>
	<string name="pref_behaviour_enable_swipe_refresh_key" translatable="false">pref_behaviour_enable_swipe_refresh</string>
	<string name="pref_behaviour_blocked_subredditsort_key" translatable="false">pref_behaviour_blocked_subreddit_sort</string>
	<string name="pref_behaviour_blocked_subredditsort">Blocked subreddits</string>
	<string name="pref_behaviour_self_post_tap_actions_key" translatable="false">pref_behaviour_self_post_tap_actions</string>
	<string name="pref_behaviour_self_post_tap_actions_title">Post text tap</string>
	<string name="pref_behaviour_sharing_share_text_key" translatable="false">pref_behaviour_comment_share_text</string>
	<string name="pref_behaviour_sharing_share_text_title">Include text when sharing comment</string>
	<string name="pref_behaviour_sharing_header">Sharing</string>
	<string name="pref_behaviour_sharing_include_desc_key" translatable="false">pref_behaviour_sharing_include_desc</string>
	<string name="pref_behaviour_sharing_include_desc_title">Include title/description when sharing</string>
	<string name="pref_behaviour_usecustomtabs_key" translatable="false">pref_behaviour_usecustomtabs_key</string>
	<string name="pref_behaviour_usecustomtabs_title">Use Android Custom Tabs</string>
	<string name="pref_behaviour_usecustomtabs_summary">Use an installed browser with Custom Tabs integration, rather than the system WebView</string>
	<string name="pref_behaviour_hide_read_posts_key" translatable="false">pref_behaviour_hide_read_posts</string>
	<string name="pref_behaviour_hide_read_posts_title">Hide read posts</string>
	<string name="prefs_category_images_video">Images/Video</string>
	<string name="pref_behaviour_sharing_share_dialog_key" translatable="false">share_order_preference_key</string>
	<string name="pref_behaviour_sharing_share_dialog_title">Use built-in share dialog</string>
	<string name="prefs_category_fonts">Font</string>
	<string name="pref_behaviour_user_postsort_key" translatable="false">pref_behaviour_user_postsort</string>
	<string name="pref_behaviour_user_postsort_title">User posts (default)</string>
	<string name="pref_behaviour_multi_postsort_key" translatable="false">pref_behaviour_multi_postsort</string>
	<string name="pref_behaviour_multi_postsort_title">Multireddit posts (default)</string>
	<string name="pref_behaviour_user_commentsort_key" translatable="false">pref_behaviour_user_commentsort</string>
	<string name="pref_behaviour_user_commentsort_title">User comments (default)</string>
	<string name="pref_behaviour_postlist_back_again_key" translatable="false">pref_behaviour_back_again</string>
	<string name="pref_behaviour_postlist_back_again">Press back twice to exit post list</string>
	<string name="pref_behaviour_back_button_title">Back Button</string>
	<string name="pref_behaviour_save_location_key" translatable="false">pref_behaviour_save_location_key</string>
	<string name="pref_behaviour_save_location_title">Save destination</string>
	<string name="three_dots_menu">More options</string>
	<string name="prefs_category_accessibility">Accessibility</string>
	<string name="pref_behaviour_post_title_opens_comments_key" translatable="false">pref_behaviour_post_title_opens_comments</string>
	<string name="pref_behaviour_post_title_opens_comments_title">Post title opens comments</string>
	<string name="prefs_category_backup_restore">Backup/Restore</string>
	<string name="prefs_category_about_key" translatable="false">prefs_category_about</string>
	<string name="prefs_category_accessibility_key" translatable="false">prefs_category_accessibility</string>
	<string name="prefs_category_appearance_key" translatable="false">prefs_category_appearance</string>
	<string name="prefs_category_backup_restore_key" translatable="false">prefs_category_backup_restore</string>
	<string name="prefs_category_behaviour_key" translatable="false">prefs_category_behaviour</string>
	<string name="prefs_category_cache_key" translatable="false">prefs_category_cache</string>
	<string name="prefs_category_fonts_key" translatable="false">prefs_category_fonts</string>
	<string name="prefs_category_images_video_key" translatable="false">prefs_category_images_video</string>
	<string name="prefs_category_menus_key" translatable="false">prefs_category_menus</string>
	<string name="prefs_category_network_key" translatable="false">prefs_category_network</string>
	<string name="pref_behaviour_block_screenshots_key">pref_behaviour_block_screenshots</string>
	<string name="pref_behaviour_block_screenshots_title">Block screenshots</string>
	<string name="pref_behaviour_block_screenshots_summary">Prevent screenshots from being taken, and hide the app content in the recents menu</string>
	<string name="pref_behaviour_collapse_sticky_comments_key">pref_behaviour_collapse_sticky_comments</string>
	<string name="pref_behaviour_collapse_sticky_comments_title">Collapse sticky comments</string>
	<string name="pref_behaviour_keep_screen_awake_key">pref_behaviour_keep_screen_awake</string>
	<string name="pref_behaviour_keep_screen_awake_title">Keep screen awake</string>
	<string name="pref_behaviour_keep_screen_awake_summary">Keep screen awake when RedReader is running in the foreground</string>
</resources>