<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of RedReader.
  ~
  ~ RedReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ RedReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RedReader.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cache_precache_images_header">

    <CheckBoxPreference android:title="@string/pref_cache_precache_images_title"
                        android:key="@string/pref_cache_precache_images_key"
                        android:defaultValue="true"/>

    <CheckBoxPreference android:title="@string/pref_cache_precache_images_wifionly_title"
                        android:key="@string/pref_cache_precache_images_wifionly_key"
                        android:dependency="@string/pref_cache_precache_images_key"
                        android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cache_precache_comments_header">

        <CheckBoxPreference android:title="@string/pref_cache_precache_comments_title"
                            android:key="@string/pref_cache_precache_comments_key"
                            android:defaultValue="true"/>

        <CheckBoxPreference android:title="@string/pref_cache_precache_comments_wifionly_title"
                            android:key="@string/pref_cache_precache_comments_wifionly_key"
                            android:dependency="@string/pref_cache_precache_comments_key"
                            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cache_pruning">

    <ListPreference android:title="@string/pref_cache_maxage_listing_title"
                    android:key="@string/pref_cache_maxage_listing_key"
                    android:entries="@array/pref_cache_maxage"
                    android:entryValues="@array/pref_cache_maxage_return"
                    android:defaultValue="168"/>

    <ListPreference android:title="@string/pref_cache_maxage_thumb_title"
                    android:key="@string/pref_cache_maxage_thumb_key"
                    android:entries="@array/pref_cache_maxage"
                    android:entryValues="@array/pref_cache_maxage_return"
                    android:defaultValue="168"/>

    <ListPreference android:title="@string/pref_cache_maxage_image_title"
                    android:key="@string/pref_cache_maxage_image_key"
                    android:entries="@array/pref_cache_maxage"
                    android:entryValues="@array/pref_cache_maxage_return"
                    android:defaultValue="24"/>

    </PreferenceCategory>

</PreferenceScreen>