<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of RedReader.
  ~
  ~ RedReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ RedReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RedReader.  If not, see <http://www.gnu.org/licenses/>.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
            android:fragment="org.saiditnet.redreader.settings.SettingsFragment"
            android:title="@string/prefs_category_appearance">
        <extra android:name="panel" android:value="appearance" />
    </header>

    <header
            android:fragment="org.saiditnet.redreader.settings.SettingsFragment"
            android:title="@string/prefs_category_behaviour">
        <extra android:name="panel" android:value="behaviour" />
    </header>

    <header
            android:fragment="org.saiditnet.redreader.settings.SettingsFragment"
            android:title="@string/prefs_category_cache">
        <extra android:name="panel" android:value="cache" />
    </header>

    <header
            android:fragment="org.saiditnet.redreader.settings.SettingsFragment"
            android:title="@string/prefs_category_network">
        <extra android:name="panel" android:value="network" />
    </header>

    <header
            android:fragment="org.saiditnet.redreader.settings.SettingsFragment"
            android:title="@string/prefs_category_menus">
        <extra android:name="panel" android:value="menus" />
    </header>

    <header
            android:fragment="org.saiditnet.redreader.settings.SettingsFragment"
            android:title="@string/prefs_category_about">
        <extra android:name="panel" android:value="about" />
    </header>

</preference-headers>